Simplify openam build